fix SVG not showing in IE FOEHN-35

--- a/src/components/02-molecules/media/logo-etat/_logo-etat.scss
+++ b/src/components/02-molecules/media/logo-etat/_logo-etat.scss
@@ -8,6 +8,7 @@
  *    https://gist.github.com/larrybotha/7881691
  * 3. Align little blason at the end (bottom)
  * 4. Align image at the start (top)
+ * 5. Fix SVG not showing in IE
  */
 .vd-logo {
   margin-bottom: $spacer;
@@ -42,6 +43,11 @@
   &__image {
     width: 12em;
     height: auto;
+
+    @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+      max-width: 12em; /* [5] */
+      width: auto; /* [5] */
+    }
   }
 
 }
